Apply the OpenRewrite findings that are worth applying
Surveyed the whole OpenRewrite recipe catalog (1180 recipes), ran the ones
that produced any change, and kept these:

* Empty collections are returned as List.of() / Set.of() rather than
  Collections.emptyList() / emptySet(), and the ClassLoaderHandler registry
  is a List.of(...) rather than Collections.unmodifiableList(Arrays.asList(...)),
  which also drops a @SuppressWarnings("null").
* Removed equals()/hashCode() overrides whose body was just a call to super,
  on InfoList, PotentiallyUnmodifiableList, ArrayClassInfo, FileSlice,
  ArraySlice and PathSlice, and a findClasspathOrder() override that did the
  same on the Plexus ClassWorlds handler.
* TypeArgument compares two enum constants with == rather than equals().
* Collections.sort(list, comparator) -> list.sort(comparator).
* Assert gets the private constructor every other utility class here has.
* Imported ClassLoaderHandlerRegistry and ThreadFactory rather than writing
  them out fully qualified.
* Dropped a redundant "value =" from annotations in three test sources, and
  an unused import.

Rejected, with reasons: removing the System.gc() calls in FileSlice and the
issue400 perf test (both deliberate -- one retries an mmap after freeing
memory, the other measures heap use); rewriting the tag dispatch in
LogicalZipFile and the annotation parameter walk in Classfile as inverted
conditions (both made the code harder to follow and misplaced the comments);
Collections.sort(list) -> list.sort(null); adding private constructors to
scanned test fixtures (that would change what ClassGraph reports for them);
and one rewrite that would not have compiled.

Tests: 391 run, 0 failures. Javadoc clean.